v1.4/markdown/asct-b/asct-b-vh-prostate.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Prostate v1.0

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Douglas Strand; Chad Vezina |
| **Creator ORCID(s):** | [0000-0002-0746-927X](https://orcid.org/0000-0002-0746-927X); [0000-0001-7058-5399](https://orcid.org/0000-0001-7058-5399) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Ellen M. Quardokus  |
| **Reviewer ORCID(s):** | [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2021-12-01 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM835.WCGP.479 |
| **Data Table:** | [Prostate v1.0](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/ASCT-B_VH_Prostate.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM835.WCGP.479](https://doi.org/10.48539/HBM835.WCGP.479) |
| **How to Cite This Data Table:** | Douglas Strand; Chad Vezina, HuBMAP ASCT+B Tables. Prostate v1.0 [https://doi.org/10.48539/HBM835.WCGP.479](https://doi.org/10.48539/HBM835.WCGP.479) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2021. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on Dec 1, 2021. |
