v2.0/markdown/asct-b/asct-b-vh-prostate.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Prostate v1.1

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

Minor changes were made for Prostate v1.1 to ensure all cell types were mapped to Cell Ontology or had a parent cell type that mapped to Cell Ontology and genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC). New cell types were also added to Cell Ontology for this release cycle.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Douglas Strand; Chad Vezina |
| **Creator ORCID(s):** | [0000-0002-0746-927X](https://orcid.org/0000-0002-0746-927X); [0000-0001-7058-5399](https://orcid.org/0000-0001-7058-5399) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Ellen M. Quardokus  |
| **Reviewer ORCID(s):** | [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833) |
| **Creation Date:** | 2023-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD033756; OT2OD026671 |
| **HuBMAP ID:** |HBM542.LMZF.884  |
| **Data Table:** | [Prostate v1.1](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-vh-prostate.csv)  |
| **DOI:** | [https://doi.org/10.48539/HBM542.LMZF.884](https://doi.org/10.48539/HBM542.LMZF.884) |
| **How to Cite This Data Table:** | Douglas Strand; Chad Vezina, HuBMAP ASCT+B Tables. Prostate v1.1 [https://doi.org/10.48539/HBM542.LMZF.884 ](https://doi.org/10.48539/HBM542.LMZF.884) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023. |
